--- a/Index.html
+++ b/Index.html
@@ -10,4 +10,5 @@
     <body>
       <script src="./js/script-1.js" type="module"></script>
       <script src="./js/script-2.js" type="module"></script>
+      <script src="./js/script-3.js" type="module"></script>
     </body>
