--- a/Index.html
+++ b/Index.html
@@ -11,4 +11,5 @@
       <script src="./js/script-1.js" type="module"></script>
       <script src="./js/script-2.js" type="module"></script>
       <script src="./js/script-3.js" type="module"></script>
+      <script src="./js/script-4.js" type="module"></script>
     </body>
