--- a/Index.html
+++ b/Index.html
@@ -12,4 +12,5 @@
       <script src="./js/script-2.js" type="module"></script>
       <script src="./js/script-3.js" type="module"></script>
       <script src="./js/script-4.js" type="module"></script>
+      <script src="./js/script-5.js" type="module"></script>
     </body>
